<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<TextView  
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:text="@string/photopicker"
    />
    <Button
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/launch_gallery"
    	android:id="@+id/btn_launch_gallery"
    ><requestFocus/>
    </Button>
    <Button
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/launch_camera"
    	android:id="@+id/btn_launch_camera"
    ><requestFocus/>
    </Button>
</LinearLayout>
