<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
   	android:background="@drawable/default_background"
   	android:gravity="center_horizontal"
    >
	<TextView  
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:text="@string/taskpicker"
    	android:layout_marginTop="8dip"
        android:layout_marginBottom="8dip"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff"
    />
    <Button
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/photo_task_btn"
    	android:id="@+id/btn_photo_task"
    	android:padding="20dip"
        android:layout_marginBottom="12dip"
        android:textSize="20sp"
    ><requestFocus/>
    </Button>
    <Button
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/annotation_task_btn"
    	android:id="@+id/btn_annotation_task"
    	android:padding="20dip"
        android:layout_marginBottom="12dip"
        android:textSize="20sp"
    ><requestFocus/>
    </Button>
     <Button
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/photostory_task_btn"
    	android:id="@+id/btn_photostory_task"
    	android:padding="20dip"
        android:layout_marginBottom="12dip"
        android:textSize="20sp"
    ><requestFocus/>
    </Button>
</LinearLayout>
