<?xml version="1.0" encoding="utf-8"?>
	<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/root"
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:gravity="center"
	    >
		<ImageView
			android:id="@+id/chosen_image"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
		/>
		<LinearLayout
		android:id="@+id/bubble_view_container"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		/>
		<RelativeLayout  	
	    	android:layout_width="fill_parent" 
	 		android:layout_height="fill_parent"
	 		android:gravity="bottom"
			android:orientation="vertical"
			android:background="@android:color/transparent">
		    <mrl.automics.ui.TransparentPanel
					android:id="@+id/transparent_panel" 
		    	    android:layout_width="fill_parent"
		        	android:layout_height="wrap_content"
		        	android:gravity="bottom"
		        	android:paddingTop="5px"
		        	android:paddingLeft="5px"
					android:paddingBottom="5px"
					android:paddingRight="5px">
			<Button 
			        android:id="@+id/add_btn"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content" 
			        android:layout_alignParentRight="true"
			        android:paddingLeft="6dip"
			        android:paddingRight="6dip"
			        android:paddingTop="20dip"
			        android:paddingBottom="20dip"
        			android:layout_marginBottom="12dip"
        			android:textSize="15sp"
			        android:text="@string/add_bubble">
			        	<requestFocus/>
			</Button>
			<Button 
			        android:id="@+id/save_btn"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content" 
			        android:layout_alignParentRight="true"
			        android:paddingLeft="17dip"
			        android:paddingRight="16dip"
			        android:paddingTop="20dip"
			        android:paddingBottom="20dip"
			        android:layout_below="@id/add_btn"
        			android:layout_marginBottom="12dip"
        			android:textSize="15sp"
			        android:text="@string/save">
			        <requestFocus/>
			</Button>
			<Button 
			        android:id="@+id/cancel_btn"
			        android:layout_width="wrap_content" 
			        android:layout_height="wrap_content" 
			        android:layout_alignParentLeft="true"
			        android:paddingLeft="10dip"
			        android:paddingRight="10dip"
			        android:paddingTop="20dip"
			        android:paddingBottom="20dip"
			        android:layout_below="@id/add_btn"
			        android:textSize="15sp"
			        android:text="@string/cancel"/>
			</mrl.automics.ui.TransparentPanel>
	</RelativeLayout>	
</FrameLayout>
